using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Petrolstation.Businesslogic
{
    [Serializable]
    public class Fueltype
    {
        // Private attributes
        private string name; //Name of the Fueltype object
        private int pricePerLiter; // In Rp.

        // Constructor
        public Fueltype(string pname, int ppricePerLiter)
        {
            name = pname;
            pricePerLiter = ppricePerLiter;
        }

        /// <summary>
        /// Get the value of 'pricePerLiter'.
        /// </summary>
        /// <returns></returns>
        public int GetPricePerLiter()
        {
            return pricePerLiter;
        }

        /// <summary>
        /// Get the value of 'name'.
        /// </summary>
        /// <returns></returns>
        public string GetName()
        {
            return name;
        }
    }
}
